--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
     ]
   },
   "include": ["site/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", ".yalc"]
 }
